# DataFusionCatalogManager

./: .env.example  .gitignore  .replit  Home.py  Pasted-onnection-error-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en-h-1729687143417.txt  README.md  add_test_supplier.py  competitor_config.json  data_import_options.py  demo_technique.txt  empty_products.py  fonctionnalites_avancees.txt  frontend_app.py  guide_depannage.txt  guide_installation.txt  init_db.py  main.py  odoo_config.json  odoo_mappings.json  presentation_youtube.txt  pyproject.toml  replit_zip_error_log.txt  requirements-dev.txt  requirements.txt  run.py  saved_connections.json  sessions.json  start_app.sh  start_services.sh  streamlit_app.py  subscription_app.py  sync_history.json  sync_schedule.json  test.py  users.json
.devcontainer/: devcontainer.json
.streamlit/: cloud.toml  config.toml  secrets.toml
.upm/: store.json
api/: main.py  subscription_api.py
components/: ai_settings.py  anything_llm_settings.py  auth_manager.py  catalog_manager.py  chat_assistant.py  chat_widget.py  cloud_storage_settings.py  dashboard.py  ftp_manager.py  heygen_settings.py  manufacturer_manager.py  matching_engine.py  price_management.py  product_enrichment.py  subscription_manager.py  supplier_management.py  sync_monitor.py  sync_scheduler.py  web_scraper.py  whatsapp_settings.py
docs/: api_docs.md
models/: __init__.py  database.py  subscription_models.py
pages/: 1_📊_Dashboard.py
services/: ai_chat_service.py  ai_service.py  anything_llm_service.py  catalog_service.py  (+18 more)
(+12 files in other folders)
